Changes in version 1.8.0

Changes in version 1.7.5.2

BUG FIXES and IMPROVEMENTS

- Correction d'un bug dans plot_typo. Les couleurs de la carte étaient inversées par rapport à celles de la légende.

Changes in version 1.7.5.1

BUG FIXES and IMPROVEMENTS

- Correction d'un bug dans les analyses en classes lorsque les donnees toutes negatives.

Changes in version 1.7.5

BUG FIXES and IMPROVEMENTS

- Meilleure position de la source lors de l'appel de la fonction add_source.
- Suppression de la syntaxe +init=epsg:XXXX (deprecated) au profit de la valeur numerique du code EPSG.
- Suppression d'un bug pour plot_typo_symboles quand xlim et ylim sont NULL.
- Pour les fonctions plot_xxx, correction d'un bug sur l'affichage des bordures de l'analyse lorsque des fonds sont ajoutes en-dessous ou au-dessus de l'analyse.
- Pour les fonctions plot_xxx, couleur de bordure de legende identique a celle de la carte.

FEATURES

- Pour la fonction leaflet_typo, possibilite de modifier les pop-up pour les cartes en typologie en passant par set_pop_up (l'argument popupClasses devient popup).

Changes in version 1.7.4

BUG FIXES and IMPROVEMENTS

- Pour la fonction plot_ronds, correction d'un bug qui empechait de visualiser les ronds de volume négatif (autre couleur).
- Pour la fonction leaflet_ronds_classes, correction d'un bug qui inversait les valeurs des classes si des volumes correspondant étaient identiques.

FEATURES

- Possibilite d'ajouter un cadre blanc autour de toutes les legendes et de personnaliser sa taille.

Changes in version 1.7.3

BUG FIXES and IMPROVEMENTS

- Correction d'un bug dans la fonction plot_typo_symbole.
- Amélioration de l'affichage de la carte.
- Depend R >= 3.3.0

Changes in version 1.7.2

FEATURES

- Pour les fonctions plot_, ajout d'un cadre blanc autour des legendes des classes.

BUG FIXES and IMPROVEMENTS

- Adaptation du CRS des fonds DOM et suite à la maj de RSpatial et sf.

Changes in version 1.7.1

BUG FIXES and IMPROVEMENTS