@@ -2,7 +2,7 @@ Package: oceanis
 Type: Package
 Title: Cartography for Statistical Analysis
 Version: 1.7.5.2
-Date: 2021-02-09
+Date: 2021-04-26
 Description: Creating maps for statistical analysis such as proportional circles, chroropleth, typology and flows. Some functions use 'shiny' or 'leaflet' technologies for dynamism and interactivity.
 	The great features are :
 	- Create maps in a web environment where the parameters are modifiable on the fly ('shiny' and 'leaflet' technology).
